# retrosync

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  app.py  config.toml  ipad.conf.sample  iphone.conf.sample  pyproject.toml  requirements.txt  retrosync.py  setup.bat  setup.sh  steamdeck.conf  steamdeck.conf.sample  test.conf
.github/workflows/: build.yml  bundle.yml  release.yml  ruff.yml  test.yml
retrosync_core/: __init__.py  config.py  events.py  jobs.py  paths.py  runner.py  transports.py  ui.py
test/: commandline.py  test_commandline.py
test/assets/playlists/: test.lpl
tests/: test_bios_sync.py  test_build_dest.py  test_commandline.py  test_config_validation.py  test_executeable.py  test_expand_config.py  test_favorites_sync.py  test_match_system.py  test_paths.py  test_playlist_sync.py  test_roms_sync.py  test_runner.py  test_target_dir_creation.py  test_thumbnails_sync.py  test_transport.py  test_transport_base.py
tests/assets/playlists/: test.lpl
