[project]
name = "retrosync"
authors = [
    {name = "David Voswinkel", email = "david@optixx.org"},
]
description = "Retrosync: Effortlessly Synchronize Retroarch Playlists to your Steam Deck"
readme = "README.md"
requires-python = ">= 3.12"

[tool.poetry]
name = "retrosync"
version = "0.1.0"
description = ""
authors = ["David Voswinkel <david@optixx.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.0"
toml = "^0.10.2"
click = "^8.1.7"
levenshtein = "^0.26.0"
lxml = "^5.3.0"
rich = "^13.8.1"
paramiko = "^3.5.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-mock = "^3.14.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.25.0"
ruff = "^0.6.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["app", "core", "test"]
exclude = ["**/node_modules",
    "**/__pycache__",
]

[tool.mypy]
strict = true
show_error_codes = true

[tool.ruff]
line-length = 100
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "dist",
    "docs",
]
[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "I001",  # unsorted imports
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B904",  # Allow raising exceptions without from e, for HTTPException
    "D1",    # Don't complain about missing docstrings
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101"]  # S101: use of assert detected


[tool.poe.tasks]
check-format = "ruff format --check ."
format = "ruff format ."
lint = "ruff check ."
lint-fix = "ruff . --fix"
mypy = "mypy ."
test = "python -m pytest tests --random-order"
static-checks.sequence = ["lint", "check-format", "mypy"]
static-checks.ignore_fail = "return_non_zero"
serve-docs = "mkdocs serve"

