[project]
name = "retrosync"
version = "0.1.0"
authors = [
    {name = "David Voswinkel", email = "david@optixx.org"},
]
description = "Retrosync: Effortlessly Synchronize Retroarch Playlists to your Steam Deck"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "toml>=0.10.2,<0.11",
    "click>=8.1.7,<9",
    "levenshtein>=0.26.0,<0.27",
    "lxml>=5.3.0,<6",
    "rich>=13.8.1,<14",
    "paramiko>=3.5.0,<4",
]

[dependency-groups]
test = [
    "pytest>=8.3.3,<9",
    "pytest-mock>=3.14.0,<4",
]
dev = [
    "ipython>=8.25.0,<9",
    "ruff>=0.6.6,<0.7",
    "pre-commit>=4.0.1,<5",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["app", "core", "test"]
exclude = ["**/node_modules",
    "**/__pycache__",
]

[tool.mypy]
strict = true
show_error_codes = true

[tool.ruff]
line-length = 100
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "dist",
    "docs",
]
[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "I001",  # unsorted imports
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B904",  # Allow raising exceptions without from e, for HTTPException
    "D1",    # Don't complain about missing docstrings
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101"]  # S101: use of assert detected


[tool.poe.tasks]
check-format = "ruff format --check ."
format = "ruff format ."
lint = "ruff check ."
lint-fix = "ruff . --fix"
mypy = "mypy ."
test = "python -m pytest tests --random-order"
static-checks.sequence = ["lint", "check-format", "mypy"]
static-checks.ignore_fail = "return_non_zero"
serve-docs = "mkdocs serve"
